force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__CourseOfferingRubricId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CourseOfferingRubricId__c</fullName>
    <label>Course Offering Rubric</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CourseOfferingRubricId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>