force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__IsIncomplete__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsIncomplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Incomplete</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsIncomplete</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>