force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__IsLate__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsLate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Late</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsLate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>