force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__IsMissing__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsMissing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Missing</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsMissing</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Checkbox</type>
</CustomField>