force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__MaximumMarksNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__MaximumMarksNumber__c</fullName>
    <label>Maximum Marks</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>MaximumMarksNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>