force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__PercentileRankPercent__c.field-meta.xml
<CustomField>
    <fullName>ssot__PercentileRankPercent__c</fullName>
    <label>Percentile Rank</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PercentileRankPercent</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>