force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__rel_1722508388979_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1722508388979_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CourseOfrPtcpActivityGrade_CourseOff_rel</label>
    <referenceTo>ssot__CourseOfferingRubric__dlm</referenceTo>
    <relationshipLabel>CourseOfrPtcpActivityGrade_CourseOff_rel</relationshipLabel>
    <relationshipName>rel_1722508388979_end</relationshipName>
    <type>Lookup</type>
</CustomField>