force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__ScoreDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScoreDate__c</fullName>
    <label>Score Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScoreDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Date</type>
</CustomField>