force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__ScoreNumber__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScoreNumber__c</fullName>
    <label>Score</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScoreNumber</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>