force-app/main/default/objects/ssot__CourseOfrPtcpActivityGrade__dlm/fields/ssot__ScoreStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__ScoreStatus__c</fullName>
    <label>Score Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ScoreStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>